# rust_todo_app

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: infrastructure.rs  main.rs
src/api/: api.rs
src/domain/todo/: full_name.rs  repository.rs  todo.rs
src/entities/: mod.rs  prelude.rs  todo.rs
src/infrastructure/: database.rs  todo.rs
src/infrastructure/todo/: create_todo_repo.rs  delete_todo_repo.rs  get_todo_repo.rs  list_todo_repo.rs  update_todo_repo.rs
src/usecase/: todo.rs
src/usecase/todo/: create_todo.rs  delete_todo.rs  get_todo.rs  list_todo.rs  update_todo.rs
