[package]
name = "rust_todo_app_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4"] }
