[package]
name = "rust_todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
async-trait = "0.1.68"

anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
getset = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4"] }

sea-orm = { version = "0.11.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"

migration = { path = "./migration" }
listenfd = "1.0.1"
